--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.2",
+    "react-spinner": "^0.2.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
